# gsbq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
airflow/dags/: app.py
dbt/gsbq/: dbt_project.yml
gsbq/: __init__.py  app.py
tests/: __init__.py  test_gsbq.py
