[tool.poetry]
name = "gsbq"
version = "0.1.0"
description = "gsbq"
authors = ["Kim, Andrew <andrewkimka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"
google-cloud-bigquery = "^3.26.0"
polars = "^1.9.0"
pyarrow = "^17.0.0"
pandas = "^2.2.3"
prefect = "^3.0.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.9.0"
flake8 = ">=5.0.4"
black = ">=22.8.0"
coverage = {version = ">=6.5.0", extras = ["toml"]}
flake8-black = ">=0.3.3"
flake8-isort = ">=4.2.0"
flake8-bugbear = ">=22.9.23"
flake8-simplify = ">=0.19.3"
flake8-docstrings = ">=1.6.0"
mypy = ">=0.981"

[tool.coverage.run]
branch = true
source = ["gsbq"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.pyright]
include = ["gsbq"]

[tool.mypy]
files = ["gsbq", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
